test/testdata/functions/anonymous/missing_4_args_error.lox
var add = fun(a, b, c, d) {
  print a + b + c + d;
};

add(); // error: (anonymous)() missing 4 arguments: a, b, c, and d
